examples/pos/infer/infer_effect_polymorphic.effekt
module examples/pos/lambdas/higherorder

effect Yield(): Unit

def effectPolymorphic() = { //: () => Unit at effectPolymorphic / Yield = {
  def local(): Unit = do Yield()
  box { local() }
}

def main() =
  try {
    val unboxed = effectPolymorphic();
    unboxed()
  } with Yield { println("yielded"); resume(()) }
